--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"url": "git+https://github.com/hakimjazuli/simple_signal.git"
 	},
 	"keywords": [
-		"signal"
+		"signal",
+		"async"
 	],
 	"author": "hakim_jazuli",
 	"license": "MIT",
