--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"main": "index.mjs",
 	"scripts": {
+		"start": "bun run watch",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "rollup -c",
 		"watch": "rollup -c -w"
