fixed documentScope type

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 	"types": "./types/index.d.mts",
 	"module": "index.mjs",
 	"scripts": {
-		"dev": "concurrently \"bun run watch\" \"bun ./dev/index.mjs\" \"bun gen:type\"",
-		"gen:type": "tsc ./index.mjs --allowJs --declaration --emitDeclarationOnly --outDir ./types --module ESNext --target ES2020 --moduleResolution node --esModuleInterop --skipLibCheck --watch",
+		"dev": "concurrently \"bun run watch\" \"bun ./dev/index.mjs\" \"bun tsc --watch\"",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "rollup -c",
 		"watch": "rollup -c -w",
@@ -30,6 +29,8 @@
 	},
 	"homepage": "https://github.com/hakimjazuli/simple_signal#readme",
 	"devDependencies": {
+		"@types/bun": "latest",
+		"typescript": "^5.0.0",
 		"@html_first/atla-as_builder": "^1.0.0",
 		"@html_first/js_lib_template": "link:@html_first/js_lib_template",
 		"concurrently": "^9.0.0"
