--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"types": "./types/index.d.mts",
 	"module": "index.mjs",
 	"scripts": {
-		"dev": "concurrently \"bun ./dev/index.mjs\" \"bun tsc --watch\"",
+		"dev": "concurrently \"bun --watch ./dev/index.mjs\" \"bun tsc --watch\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
